# renquant-pipeline

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  renquant_repo.yml
.github/workflows/: ci.yml
doc/: 2026-06-09-qp-new-buy-sizing-bug.md  2026-06-10-audit-qp-emission-stops-preflight.md  2026-06-26-shadow-scoring-degenerate-matrix-guard.md  2026-06-27-model-staleness-covers-xgb-primary.md  2026-07-01-staleness-gate-data-cutoff.md  2026-07-01-unify-model-content-sha256.md  2026-07-02-admission-shadow-logger.md  2026-07-02-bl1-recenter-raw-per-bar.md  2026-07-02-one-share-floor-initiation.md  2026-07-03-m6-stage1-fingerprint-dispatch.md  2026-07-03-parking-sleeve-operational-vs-economic.md  2026-07-04-patchtst-mirror-port-a1.md
doc/audit/: 2026-06-10-admission-selection-sizing-audit.md  2026-06-10-scoring-calibrator-audit.md  2026-07-03-design-compliance-audit.md
doc/design/: 2026-07-17-vetoweakbuys-smalln-guard.md  2026-07-18-smalln-guard-eligibility-ledger.md  2026-07-19-smalln-guard-conditional-go.md
doc/evidence/: 2026-07-02-bl1-recenter-shadow-replay.json
doc/progress/: 2026-07-03-a3-sizing-gate-keys-failloud.md  2026-07-03-design-compliance-audit.md  2026-07-03-s-frac-stage2-fractional-sizing.md  2026-07-04-alpha158-operator-unify.md  2026-07-04-lazy-panel-pipeline-init.md  2026-07-04-py39-pipeline-compat.md  2026-07-04-s5-decision-ledger-formatter.md  2026-07-04-software-stops-registry-relocation.md  2026-07-06-frozen-score-slice2-contract.md  2026-07-09-deployment-governor.md  2026-07-09-replay-harness-d6-conventions.md  2026-07-10-crypto-asset-class-policy.md  2026-07-10-governor-sizing-no-sell-1091-scope.md  2026-07-10-parking-sleeve-live-mode.md  2026-07-10-shadow-arm-broker-tags.md  2026-07-11-data-availability-gate.md  2026-07-11-fill-truth-runs-db.md  2026-07-11-funnel-integrity-task.md  2026-07-12-sizing-intent-contract.md  2026-07-13-g3-v005-public-surface.md  2026-07-13-g3-v006-allowed-brokers.md  2026-07-13-v003-import-from-common.md  2026-07-14-g3-f8-kernel-ownership-contract.md  2026-07-16-diagnostic-only-override.md  2026-07-16-g4-training-metadata-persistence.md  2026-07-17-vetoweakbuys-smalln-guard.md  2026-07-18-bundle-contract-phase2.md  2026-07-18-decision-schedule-contract.md  2026-07-18-smalln-eligibility-amendment.md  2026-07-18-smalln-eligibility-ledger-impl.md  2026-07-18-vetoweakbuys-smalln-impl.md  2026-07-19-smalln-conditional-go.md  2026-07-21-shadow-scorer-health-record.md
docs/: source-map.md
scripts/: backfill_decision_ledger_returns.py  gate_validation_query.py  score_drift_monitor.py  shadow_replay_bl1_recenter.py
src/renquant_pipeline/: __init__.py  artifact_contract.py  bundle_contract.py  context.py  decision_ledger.py  decision_schedule.py  decision_trace.py  inference.py  intraday_decisioning.py  live_state_contract.py  model_admission.py  native_inference.py  order_attribution.py  panel_scoring.py  public.py  runtime_features.py  selection.py  sizing_intent.py  software_stops.py  state_paths.py  xgboost_scorer.py
tests/: test_active_scorer_attribution.py  test_admission_shadow.py  test_alert_lifecycle.py  test_alert_persistence.py  test_allocator_replay.py  test_alpha158_antiskew.py  test_alpha_portfolio_allocators.py  test_artifact_resolver.py  test_asset_class_policy.py  test_baseline_allocators.py  test_bear_defensive_sleeve.py  test_bl1_recenter_raw_per_bar.py  test_bl2_signal_direction.py  test_bl4_qp_per_regime_floor.py  test_broker_reconciliation.py  test_build_constraint_snapshot_task.py  test_bull_calm_momentum_guard.py  test_bundle_contract.py  test_buy_gate_calibrated_mu.py  test_c211_panel_pipeline_lift.py  test_c212_pipeline_drivers_lift.py  test_c29_data_preflight_lift.py  test_calibrator_mu_reclip_horizon.py  test_config_schema.py  test_constraint_snapshot.py  test_conviction_gate.py  test_crypto_portfolio.py  test_data_availability.py  test_data_integrity_task.py  test_data_root_resolver.py  test_data_verification.py  test_davis_norman_band.py  test_decision_ledger.py  test_decision_outcomes_view.py  test_decision_schedule.py  test_decision_trace_expected_return.py  test_deployment_allocator.py  test_deployment_governor.py  test_diagnostic_only_override.py  test_e1_tc_decomposition.py  (+117 more)
(+212 files in other folders)
