[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-pipeline"
version = "0.3.0"
description = "Runtime decision-pipeline composition for RenQuant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "renquant-common>=0.3,<0.4",
  "renquant-base-data>=0.1.0",
  "renquant-artifacts>=0.1.0",
  "cvxpy>=1.4",
]

# Optional extras let downstream installs pull in a specific scorer family.
# Pipeline itself does NOT import these libraries; it goes through
# renquant_common.load_scorer + entry points per RFC §"Cross-Repo Contracts".
# renquant-model is the merged GBDT + PatchTST family repo (RFC P3); the
# [gbdt] extra selects its xgboost backend.
[project.optional-dependencies]
gbdt = ["renquant-model[gbdt]>=0.1,<0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../renquant-common/src", "../renquant-base-data/src", "../renquant-artifacts/src", "../renquant-model/src"]
testpaths = ["tests"]
