[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-pipeline"
version = "0.4.0"
description = "Runtime decision-pipeline composition for RenQuant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "renquant-common>=0.5,<0.9",
  "renquant-base-data>=0.1.0",
  "renquant-artifacts>=0.1.0",
  "cvxpy>=1.4",
]

# Optional extras let downstream installs pull in a specific scorer family.
# Pipeline itself does NOT import these libraries; it goes through
# renquant_common.load_scorer + entry points per RFC §"Cross-Repo Contracts".
# renquant-model is the merged GBDT + PatchTST family repo (RFC P3); the
# [gbdt] extra selects its xgboost backend.
[project.optional-dependencies]
gbdt = ["renquant-model[gbdt]>=0.1,<0.2"]
# PatchTST family inference (kernel/panel_pipeline/hf_patchtst_scorer.py
# imports HFPatchTSTRanker). The PatchTST namespace (renquant_model_patchtst)
# is shipped by the merged renquant-model distribution; the standalone
# `renquant-model-patchtst` PyPI package is a deprecated stub
# (MIGRATED_TO_renquant-model.md). The [patchtst] extra of renquant-model
# pulls in torch + transformers. Without this extra, hf_patchtst_scorer
# falls back to file-importing scripts/patchtst_hf.py from an umbrella
# checkout (rollback only).
patchtst = ["renquant-model[patchtst]>=0.1,<0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../renquant-common/src", "../renquant-base-data/src", "../renquant-artifacts/src", "../renquant-model/src"]
testpaths = ["tests"]
